cmake_minimum_required(VERSION 3.0)
PROJECT(fractals)
FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)
SET(MySources fractals.cpp)
ADD_EXECUTABLE(fractals ${MySources})
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIRS} ${GLUT_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(fractals ${OpenCV_LIBS} ${OPENGL_LIBRARIES} ${GLUT_LIBRARY})
SET_SOURCE_FILES_PROPERTIES(${MySources} PROTERTIES LANGUAGE CXX)
